# HST

./: .gitignore  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Grok review.txt  HST DUMP.txt  HST_Analysis_Report.md  HST_Architecture_Complete_Book.md  Harmonic.html  IMPROVEMENTS_SUMMARY.md  INSTALL.md  LICENCE.md  Licence.txt  README.md  USAGE.md  aethyr_license.md  app.py  author.notes  benchmark.py  chunk_hst.py  generate.py  hst.v8.1.py  hst_architecture_paper.md  hst_cl_accurate_colab_training.py  hst_en_accurate_colab_training.py  hst_v3_full_train.py  hst_v3_lite.py  hst_v3_ultra.py  hst_v3_ultra_accurate_colab_training.py  hst_v4.1.py  hst_v4_1_accurate_colab_training.py  hst_v4_accurate_colab_training.py  hst_v4_unified.py  hst_v5_2_accurate_colab_training.py  hst_v5_2_unified.py  hst_v5_accurate_colab_training.py  hst_v6_1_accurate_colab_training.py  hst_v6_2_accurate_colab_training.py  hst_v6_3_accurate_colab_training.py  (+19 more)
EXP/: GROK.txt  deepseek_python_20251211_265d82.py  deepseek_python_20251211_6c90bc.py  deepseek_python_20251211_9551f0.py
HST V5 - GPT2 Training logs/: HST Transfer.txt  Valve 2.txt  Valve.txt
HST v3 Training logs/: HST v3 t4 colab training.txt  HST-v3-train.txt
HST v5 Training logs/: README.md  chunk128.py  hst_v5_chunk_story_100k_chars (2).txt  hst_v5_chunk_story_100k_chars.txt  train-v5.py
colab_training_scripts/: HST_ChaosLogic_Colab_Training.py  HST_v3_Ultra_Colab_Training.py  HST_v4_1_HyperLattice_Colab_Training.py  HST_v4_Unified_Colab_Training.py  HST_v5_Colab_Training.py  HST_v6_Colab_Training.py  HST_v7_1_2_Agile_Colab_Training.py  HST_v8_2_Crystalline_Colab_Training.py  README.md
examples/: basic_usage.py  representation_learning.py  time_series_forecasting.py
src/: hst_v8.py  hst_v8_2.py
tests/: test_hst.py
